examples/test/testpolicy4091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4091
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key8: value47
      key42: value44
      key34: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
          key49: value49
      podSelector:
        matchLabels:
          key38: value5
          key16: value29
          key32: value3
